@@ -1,3 +1,10 @@
+2011-08-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c (self_spec): New variable.
+	(static_specs): Add self_spec.
+	(main): Call do_self_spec on "self_spec" specs after reading
+	user specs files.  Move compare_debug handling right after that.
+
 2011-07-22  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR debug/49815
